<resources>
    <string name="app_name">GitHub User</string>

    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="tab_layout_content_desc">Followers and Following Tab</string>
    <string name="find_username">Find Username</string>

    <string name="favorite">Favorite</string>
    <string name="favorite_add">Added to favorite</string>
    <string name="favorite_deleted">Deleted from favorite</string>
    <string name="empty_favorite">There is no favorite yet</string>

    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About app</string>
    <string name="about_app">This app was made to fulfill submission assignments in the BFAA class at dicoding.com. The purpose of this application is to implement several components such as Network using Retrofit, Local Database using Room, Dark Mode using Data Store, etc. You can use the source code of this app as reference material.</string>
    <string name="copyright">Copyright © 2023 Abdul Ghany At-Tirmidzi</string>

    <string name="placeholder_not_found">User Not Found</string>
    <string name="placeholder_title">Waiting to search!</string>
    <string name="placeholder_content">Search result will appear here</string>

    <string name="created_by">Created by Ghany At-Tirmidzi</string>
    <string name="github_logo">Github Logo</string>
    <string name="github_text">Github Text</string>
    <string name="button_back">Button Back</string>

    <string name="example_repos">0</string>
    <string name="example_followers">1</string>
    <string name="example_following">2</string>
    <string name="example_location">Location</string>
    <string name="example_company">Company</string>
    <string name="btn_share">Button Share</string>
</resources>