<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_detail"
    style="@style/AppColorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/user_appbar"
        style="@style/ActionBarColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/user_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/back_button"
                style="@style/TextImageColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/button_back" />

            <TextView
                android:id="@+id/user_toolbar_title"
                style="@style/TextImageColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/username" />

            <ImageView
                android:id="@+id/btn_favorite"
                style="@style/TextImageColor"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_favorite_outlined"
                android:contentDescription="@string/favorite" />

            <ImageView
                android:id="@+id/btn_share"
                style="@style/TextImageColor"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_share_outlined"
                android:contentDescription="@string/btn_share" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_appbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:src="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_repos"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@{user.name}"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{user.login}"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/username" />

        <ImageView
            android:id="@+id/iv_location"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_location"
            app:layout_constraintBottom_toBottomOf="@id/tv_location"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/example_location"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/iv_location"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            tools:text="@string/location" />

        <ImageView
            android:id="@+id/iv_company"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_company"
            app:layout_constraintBottom_toBottomOf="@id/tv_company"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/example_company"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_company"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            tools:text="@string/company" />

        <!--Repository-->
        <TextView
            android:id="@+id/tv_repos"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"
            android:text="@string/repository"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@id/user_repos" />

        <TextView
            android:id="@+id/user_repos"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/example_repos"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintStart_toStartOf="@id/tv_repos"
            app:layout_constraintEnd_toEndOf="@id/tv_repos"
            tools:text="@string/example_repos" />

        <!--Followers-->
        <TextView
            android:id="@+id/tv_followers"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"
            android:text="@string/followers"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_repos"
            app:layout_constraintTop_toBottomOf="@id/user_followers"
            app:layout_constraintEnd_toStartOf="@id/tv_following" />

        <TextView
            android:id="@+id/user_followers"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_followers"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/user_repos"
            app:layout_constraintStart_toStartOf="@id/tv_followers"
            app:layout_constraintEnd_toEndOf="@id/tv_followers"
            tools:text="@string/example_followers" />

        <!--Following-->
        <TextView
            android:id="@+id/tv_following"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/following"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_following" />

        <TextView
            android:id="@+id/user_following"
            style="@style/TextImageColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_following"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/user_followers"
            app:layout_constraintStart_toStartOf="@id/tv_following"
            app:layout_constraintEnd_toEndOf="@id/tv_following"
            tools:text="@string/example_following" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        style="@style/TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_layout" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>